--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculator</title>
-    <link rel="icon" href="calculator.png">
-    <link rel="stylesheet" href="app.css">
-  </head>
-  <body>
-    <h1>Calculator</h1>
-    <div class='container'>
-      <table>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Calculator</title>
+  <link rel="icon" href="calculator.png">
+  <link rel="stylesheet" href="app.css">
+</head>
+<body>
+  <h1>Calculator</h1>
+  <div class='container'>
+ <table>
         <tr>
           <td colspan="3"><input type='text' id='result' class='screen'></td>
           <td>
@@ -76,7 +76,12 @@
       </table>
     </div>
     <script src='app.js'>
+  </div>
+  <script src='app.js'></script>
 
-    </script>
-  </body>
+  <!-- Footer section with the button -->
+  <footer>
+    <button onclick="window.location.href = 'https://sites.google.com/students.ocps.net/supernovahd'">Click me for supernova</button>
+  </footer>
+</body>
 </html>
